--- a/hcss.css
+++ b/hcss.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&family=Ubuntu&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&family=Ubuntu&family=Lato&display=swap");
 body,
 html {
   margin: 0;
@@ -8,6 +8,11 @@ body a,
 html a {
   text-decoration: none;
   color: #7890f0;
+}
+
+body img,
+html img {
+  display: block;
 }
 
 body h1,
@@ -36,11 +41,108 @@ html * {
   font-family: "Roboto", sans-serif;
 }
 
+body p,
+html p {
+  padding: 1%;
+  font-family: "Lato", sans-serif;
+}
+
 body .flex,
 html .flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+body .f-auto,
+html .f-auto {
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+}
+
+body .f-1,
+html .f-1 {
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+}
+
+body .f-2,
+html .f-2 {
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+}
+
+body .f-3,
+html .f-3 {
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+}
+
+body .f-01,
+html .f-01 {
+  -webkit-box-flex: 0.1;
+      -ms-flex: 0.1;
+          flex: 0.1;
+}
+
+body .f-02,
+html .f-02 {
+  -webkit-box-flex: 0.2;
+      -ms-flex: 0.2;
+          flex: 0.2;
+}
+
+body .f-03,
+html .f-03 {
+  -webkit-box-flex: 0.3;
+      -ms-flex: 0.3;
+          flex: 0.3;
+}
+
+body .f-04,
+html .f-04 {
+  -webkit-box-flex: 0.4;
+      -ms-flex: 0.4;
+          flex: 0.4;
+}
+
+body .f-05,
+html .f-05 {
+  -webkit-box-flex: 0.5;
+      -ms-flex: 0.5;
+          flex: 0.5;
+}
+
+body .f-06,
+html .f-06 {
+  -webkit-box-flex: 0.6;
+      -ms-flex: 0.6;
+          flex: 0.6;
+}
+
+body .f-07,
+html .f-07 {
+  -webkit-box-flex: 0.7;
+      -ms-flex: 0.7;
+          flex: 0.7;
+}
+
+body .f-08,
+html .f-08 {
+  -webkit-box-flex: 0.8;
+      -ms-flex: 0.8;
+          flex: 0.8;
+}
+
+body .f-09,
+html .f-09 {
+  -webkit-box-flex: 0.9;
+      -ms-flex: 0.9;
+          flex: 0.9;
 }
 
 body .fd-row,
@@ -99,6 +201,11 @@ html .aite-fe {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
+}
+
+body .m-0,
+html .m-0 {
+  margin: 0;
 }
 
 body .m-1,
@@ -224,6 +331,11 @@ html .mr-4 {
 body .mr-5,
 html .mr-5 {
   margin-right: 5em;
+}
+
+body .p-0,
+html .p-0 {
+  padding: 0;
 }
 
 body .p-1,
@@ -386,6 +498,41 @@ html .header.tiny {
   height: 5em;
 }
 
+body .footer,
+html .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #dadada;
+  padding: 2%;
+}
+
+body .footer.shadow,
+html .footer.shadow {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 -0.5em 5mm;
+          box-shadow: rgba(0, 0, 0, 0.12) 0 -0.5em 5mm;
+}
+
+body .footer.large,
+html .footer.large {
+  height: 20em;
+}
+
+body .footer.medium,
+html .footer.medium {
+  height: 15em;
+}
+
+body .footer.small,
+html .footer.small {
+  height: 10em;
+}
+
+body .footer.tiny,
+html .footer.tiny {
+  height: 5em;
+}
+
 body .tcenter,
 html .tcenter {
   text-align: center;
@@ -403,25 +550,25 @@ html .tright {
 
 body .bg-green,
 html .bg-green {
-  background: #6dd04f;
+  background: #79ed56;
   color: black;
 }
 
 body .bg-red,
 html .bg-red {
-  background: #f27575;
+  background: #d15454;
   color: black;
 }
 
 body .bg-blue,
 html .bg-blue {
-  background: #3a84b5;
+  background: #49acee;
   color: white;
 }
 
 body .bg-grey,
 html .bg-grey {
-  background: #c7c7c7;
+  background: #aaaaaa;
   color: black;
 }
 
@@ -441,6 +588,41 @@ body .bg-dark-ter,
 html .bg-dark-ter {
   background: #444444;
   color: white;
+}
+
+body .green,
+html .green {
+  color: #79ed56;
+}
+
+body .red,
+html .red {
+  color: #d15454;
+}
+
+body .blue,
+html .blue {
+  color: #49acee;
+}
+
+body .grey,
+html .grey {
+  color: #aaaaaa;
+}
+
+body .dark,
+html .dark {
+  color: #313131;
+}
+
+body .dark-bis,
+html .dark-bis {
+  color: #3c3c3c;
+}
+
+body .dark-ter,
+html .dark-ter {
+  color: #444444;
 }
 
 body .navbar,
@@ -522,6 +704,46 @@ html .container.shadow {
           box-shadow: rgba(0, 0, 0, 0.12) 1mm 1mm 3.5mm;
 }
 
+body .w25,
+html .w25 {
+  width: 25%;
+}
+
+body .w50,
+html .w50 {
+  width: 50%;
+}
+
+body .w75,
+html .w75 {
+  width: 75%;
+}
+
+body .w100,
+html .w100 {
+  width: 100%;
+}
+
+body .h25,
+html .h25 {
+  height: 25%;
+}
+
+body .h50,
+html .h50 {
+  height: 50%;
+}
+
+body .h75,
+html .h75 {
+  height: 75%;
+}
+
+body .h100,
+html .h100 {
+  height: 100%;
+}
+
 @media (max-width: 425px) {
   h1,
   h2,
@@ -549,6 +771,9 @@ html .container.shadow {
   }
   h6 {
     font-size: 1.13em;
+  }
+  p {
+    padding: 0;
   }
 }
 
